--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "lint" : "eslint ./"
+    "start": "nodemon ./src/server.js",
+    "lint": "eslint ./"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +16,9 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "hapi": "^18.1.0",
+    "standard": "^16.0.3"
   }
 }
